--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Portfolio items</h1>
 
+<%= link_to 'Create Portfolio', new_portfolio_path %>
+
 <% @portfolio_items.each do |item| %>
-  <p><%= item.title %></p>
+  <p><%= link_to item.title, portfolio_path(item) %></p>
   <p><%= item.subtitle %></p>
+
+  <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
+  <%= link_to 'Edit', edit_portfolio_path(item) %>
 <% end %>
+
+<%= link_to 'Create Portfolio', new_portfolio_path %>
