--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,5 +4,10 @@
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body %></p>
 
+<h2>Technologies Used</h2>
+<% @portfolio_item.technologies.each do |techno| %>
+  <p><%= techno.name %></p>
+<% end %>
+
 <%= link_to 'Edit', edit_portfolio_path(@portfolio_item) %>
 <%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?'} %>
