--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KersuzanPortfolio</title>
+    <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <div>
+      <div><%= link_to 'Home', root_path %></div>
+      <div><%= link_to 'About', about_path %></div>
+      <div><%= link_to 'Contact', contact_path %></div>
+      <div><%= link_to 'Blogs', blogs_path %></div>
+      <div><%= link_to 'Portfolio', portfolios_path %></div>
+    </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
