Creates navigation partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,8 @@
   </head>
 
   <body>
-    <div>
-      <div><%= link_to 'Home', root_path %></div>
-      <div><%= link_to 'About', about_path %></div>
-      <div><%= link_to 'Contact', contact_path %></div>
-      <div><%= link_to 'Blogs', blogs_path %></div>
-      <div><%= link_to 'Portfolio', portfolios_path %></div>
-    </div>
+    <%= render 'shared/navigation' %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
