--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,13 +22,7 @@
 
 <%= yield %>
 
-<div>
-  <div><%= link_to 'Home', root_path %></div>
-  <div><%= link_to 'About', about_path %></div>
-  <div><%= link_to 'Contact', contact_path %></div>
-  <div><%= link_to 'Blogs', blogs_path %></div>
-  <div><%= link_to 'Portfolio', portfolios_path %></div>
-</div>
+<%= render 'shared/navigation' %>
 
 <p><%= "Thank you for visiting me from #{session[:source]}" unless session[:source].nil? %></p>
 </body>
