--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <%= render 'shared/navigation' %>
+    <%= render 'shared/navigation', location: 'top' %>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
