Adds view helper for source

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
 
     <%= yield %>
 
-    <p><%= "Thank you for visiting me from #{session[:source]}" unless session[:source].nil? %></p>
+    <%= source_helper %>
   </body>
 </html>
