--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,6 +19,7 @@
 
 <%= render 'shared/navigation', location: 'bottom' %>
 
-<p><%= "Thank you for visiting me from #{session[:source]}" unless session[:source].nil? %></p>
+<%= source_helper %>
+
 </body>
 </html>
