--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,13 +4,6 @@
 
 <%= link_to 'Create Portfolio', new_portfolio_path %>
 
-<% @portfolio_items.each do |item| %>
-  <p><%= link_to item.title, portfolio_path(item) %></p>
-  <p><%= item.subtitle %></p>
-
-  <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
-  <%= link_to 'Edit', edit_portfolio_path(item) %>
-  <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
 
 <%= link_to 'Create Portfolio', new_portfolio_path %>
