Adds bootstrap gem

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,6 +4,6 @@
 
 <%= link_to 'Create Portfolio', new_portfolio_path %>
 
-<%= render partial: 'portfolio_item', collection: @portfolio_items %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items, as: :item %>
 
 <%= link_to 'Create Portfolio', new_portfolio_path %>
