--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -2,5 +2,5 @@
 <p><%= item.subtitle %></p>
 
 <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
-<%= link_to 'Edit', edit_portfolio_path(item) %>
-<%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Edit', edit_portfolio_path(item) if logged_in?(:site_admin) %>
+<%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
