--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Portfolio items</h1>
 
-<%= link_to 'Create Portfolio', new_portfolio_path %>
+<%= link_to 'Create Portfolio', new_portfolio_path if logged_in?(:site_admin) %>
 
 <%= render partial: 'portfolio_item', collection: @portfolio_items, as: :item %>
 
-<%= link_to 'Create Portfolio', new_portfolio_path %>
+<%= link_to 'Create Portfolio', new_portfolio_path if logged_in?(:site_admin) %>
