--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -9,5 +9,5 @@
   <p><%= techno.name %></p>
 <% end %>
 
-<%= link_to 'Edit', edit_portfolio_path(@portfolio_item) %>
-<%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?'} %>
+<%= link_to 'Edit', edit_portfolio_path(@portfolio_item) if logged_in?(:site_admin) %>
+<%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?'} if logged_in?(:site_admin) %>
