--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,10 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
           <%= render 'shared/application_nav', location: 'top' %>
-          <%= login_helper %>
 
           <%= yield %>
 
-          <%= source_helper %>
-
-          <%= copyright_generator %>
+          <%= render 'shared/application_footer' %>
         </div>
       </div>
     </div>
