Adds content for home and contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,25 @@
-<h1>Contact</h1>
+ <h1 class="cover-heading">Would you like to work together?</h1>
+ <hr>
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Office Address: </h3>
+      <p>Paris</p>
 
-<%= number_to_phone "0788921430", country_code: 33 %>
+      <h3>Phone Number:</h3>
+      <p><%= number_to_phone '0788921430', country_code: 33 %></p>
+
+      <h3>Email:</h3>
+      <a href="mailto:kersuzan.anthony@gmail.com?subject=PorfolioContact">kersuzan.anthony@gmail.com</a>
+    </div>
+    <div class="col-md-6">
+      <iframe
+        width="600"
+        height="450"
+        frameborder="0" style="border:0"
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAmYF24XAaGaD5tVuvT9uxNDtJpJLIOKjU&q=Paris"
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+
+
