--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="inner cover">
+  <h1 class="cover-heading">About Me.</h1>
+  <p class="lead">About me Page.</p>
+</div>
