--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,8 +17,9 @@
 
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">The Bootstrap Blog</h1>
+    <h1 class="blog-title">My blog</h1>
     <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
   </div>
 </div>
 
@@ -26,7 +27,6 @@
   <div class="row">
 
     <%= yield %>
-
 
     <div class="col-sm-3 offset-sm-1 blog-sidebar">
       <div class="sidebar-module sidebar-module-inset">
@@ -59,18 +59,16 @@
         </ol>
       </div>
     </div><!-- /.blog-sidebar -->
-
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
-
-    <%= render 'shared/navigation', location: 'bottom' %>
-
-    <%= source_helper %>
   </div>
+
+  <footer class="blog-footer">
+    <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>
+      <a href="#">Back to top</a>
+    </p>
+  </footer>
+
+  <%= source_helper %>
 </div>
 
 </body>
