--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,7 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Portfolio items</h1>
-
-<%= link_to 'Create Portfolio', new_portfolio_path if logged_in?(:site_admin) %>
-
-<%= render partial: 'portfolio_item', collection: @portfolio_items, as: :item %>
-
-<%= link_to 'Create Portfolio', new_portfolio_path if logged_in?(:site_admin) %>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
+      <%= render partial: 'portfolio_item', collection: @portfolio_items, as: :item %>
+    </div>
+  </div>
+</div>
