--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,13 +1,22 @@
-<%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-7">
+      <%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
+    </div>
+    <div class="col-sm-5">
+      <h1><%= @portfolio_item.title %></h1>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
 
-<h1><%= @portfolio_item.title %></h1>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body %></p>
+      <hr>
+      <h3>Technologies Used</h3>
+      <% @portfolio_item.technologies.each do |techno| %>
+          <p><%= techno.name %></p>
+      <% end %>
 
-<h2>Technologies Used</h2>
-<% @portfolio_item.technologies.each do |techno| %>
-  <p><%= techno.name %></p>
-<% end %>
+      <%= link_to 'Edit', edit_portfolio_path(@portfolio_item), class: 'btn btn-primary' if logged_in?(:site_admin) %>
+      <%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure?'} if logged_in?(:site_admin) %>
 
-<%= link_to 'Edit', edit_portfolio_path(@portfolio_item) if logged_in?(:site_admin) %>
-<%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete, data: { confirm: 'Are you sure?'} if logged_in?(:site_admin) %>
+    </div>
+  </div>
+</div>
