--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,41 +1,38 @@
 <%= form_for(portfolio_item) do |f| %>
-    <% if portfolio_item.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(portfolio_item.errors.count, "error") %> prohibited this blog from being saved:</h2>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
 
-          <ul>
-            <% portfolio_item.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :title %>
-      <%= f.text_field :title %>
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= f.label :body %>
+        <%= f.text_area :body, class: 'form-control', rows: 10 %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :subtitle %>
-      <%= f.text_field :subtitle %>
-    </div>
+    <hr>
+    <div class="col-md-12">
+      <h2>Technologies Used</h2>
+      <div>
+        <%= f.fields_for :technologies do |techno_form| %>
+            <div class="form-group">
+              <%= techno_form.label :name %>
+              <%= techno_form.text_field :name, class: 'form-control' %>
+            </div>
+        <% end %>
+      </div>
 
-    <div class="field">
-      <%= f.label :body %>
-      <%= f.text_area :body %>
+      <div class="form-group">
+        <%= f.submit 'Save Portfolio', class: 'btn btn-primary btn-block' %>
+      </div>
     </div>
-
-    <ul>
-      <%= f.fields_for :technologies do |techno_form| %>
-        <li>
-          <%= techno_form.label :name %>
-          <%= techno_form.text_field :name %>
-        </li>
-      <% end %>
-    </ul>
-
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+  </div>
 <% end %>
