--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="card" data-id="<%= item.id %>">
-  <%= image_tag item.thumb_image unless item.thumb_image.nil? %>
+  <%= image_tag item.thumb_image, width: '100%' unless item.thumb_image.nil? %>
   <p class="card-text">
     <span><%= link_to item.title, portfolio_path(item) %></span>
     <%= item.subtitle %>
