--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -36,11 +36,12 @@
       <h2>Technologies Used</h2>
       <div>
         <%= f.fields_for :technologies do |techno_form| %>
-            <div class="form-group">
-              <%= techno_form.label :name %>
-              <%= techno_form.text_field :name, class: 'form-control' %>
-            </div>
+          <%= render 'technology_fields', f: techno_form %>
         <% end %>
+
+        <div>
+          <%= link_to_add_association 'Add Technology', f, :technologies %>
+        </div>
       </div>
 
       <div class="form-group">
