Implements gritter for displaying flash message

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "gritter";
 @import "jquery-ui";
 // Place all the styles related to the Portfolios controller here.
 // They will automatically be included in application.css.
