--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 
           <%= yield %>
 
+          <%= render 'shared/alert' %>
+
           <%= render 'shared/application_footer' %>
         </div>
       </div>
