--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,27 +1,21 @@
 <%= form_for(blog) do |f| %>
-  <% if blog.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+    <% if blog.errors.any? %>
+        <% blog.errors.full_messages.each do |error| %>
+            <%= js add_gritter(error, :title => 'Kersuzan Anthony Portfolio', :sticky => false) %>
+        <% end %>
+    <% end %>
 
-      <ul>
-      <% blog.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control' %>
     </div>
-  <% end %>
 
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <%= f.label :body %>
+      <%= f.text_area :body, class: 'form-control', rows: 20 %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', rows: 20 %>
-  </div>
-
-  <div class="form-group">
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
-  </div>
+    <div class="form-group">
+      <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    </div>
 <% end %>
