Refactor alert into view helper'

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -25,6 +25,8 @@
     <%= render 'shared/blog_sidebar' %>
   </div>
 
+  <%= alerts %>
+
   <%= render 'shared/blog_footer' %>
 
   <%= source_helper %>
