--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
           <%= yield %>
 
-          <%= render 'shared/alert' %>
+          <%= alerts %>
 
           <%= render 'shared/application_footer' %>
         </div>
