--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="inner cover">
+<div class="inner cover application-inner">
   <h1 class="cover-heading">About Me.</h1>
   <p class="lead">About me Page.</p>
 </div>
