--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="login">
+<div class="login application-inner">
   <div class="card">
     <div class="card-block">
       <h2>Forgot your password?</h2>
