--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card application-inner">
   <div class="card-block">
     <div class="row">
       <div class="col-sm-8">
