--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,6 @@
- <h1 class="cover-heading">Would you like to work together?</h1>
- <hr>
+<div class="application-inner">
+  <h1 class="cover-heading">Would you like to work together?</h1>
+  <hr>
   <div class="row">
     <div class="col-md-6">
       <h3>Office Address: </h3>
@@ -13,13 +14,12 @@
     </div>
     <div class="col-md-6">
       <iframe
-        width="600"
-        height="450"
-        frameborder="0" style="border:0"
-        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAmYF24XAaGaD5tVuvT9uxNDtJpJLIOKjU&q=Paris"
-        allowfullscreen>
+      width="600"
+      height="450"
+      frameborder="0" style="border:0"
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAmYF24XAaGaD5tVuvT9uxNDtJpJLIOKjU&q=Paris"
+      allowfullscreen>
       </iframe>
     </div>
   </div>
-
-
+</div>
