--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,4 +1,4 @@
-<div class="inner cover">
+<div class="inner cover application-inner">
   <h1 class="cover-heading">Tech news</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
