Update styles for comment card

--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -171,6 +171,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -186,4 +187,18 @@ h6, .h6 {
  */
 .social-links li {
   font-size: 1.5em;
+}
+
+// Comments
+.comment-card {
+  margin-top: 15px;
+}
+
+.comment-attribution {
+  font-style: italic;
+  font-size: small;
+}
+
+.comment-name {
+  font-weight: 700;
 }
