--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,10 +3,11 @@
     <div class="card-block">
       <div class="row">
         <div class="col-md-2">
-
+          <%= gravatar_helper comment.user %>
         </div>
         <div class="col-md-10">
-          <%= comment.content %>
+          <p><%= comment.content %></p>
+          <p class="comment-attribution">Posted by <span class="comment-name"><%= comment.user.first_name %></span> <%= distance_of_time_in_words comment.created_at, Time.now %> ago</p>
         </div>
       </div>
     </div>
