--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -49,7 +49,6 @@ body {
 
 .card {
   float: left;
-  width: 33.333%;
   padding: .75rem;
   margin-bottom: 2rem;
   border: 0;
@@ -81,4 +80,8 @@ footer p {
 
 .portfolio-container {
   padding-top: 30px;
+}
+
+.center {
+  text-align: center;
 }
